# vse

./: .gitignore
cours/11/: VSE_11_sv_assertions.md
cours/12/: README.md
ex01_plan_verification/code/: uart_testplan.ods
ex02_tbcomb_vrm/: .gitignore  ex_sv_random_prob.md
ex02_tbcomb_vrm/code/: default.rmdb
ex02_tbcomb_vrm/code/src_tb/: adder_tb.sv
ex02_tbcomb_vrm/code/src_vhdl/: adder.vhd
ex03_sv_random/code/src_tb/: test_random_tb.sv
ex05_sv_assertions/code/scripts/: sim.do
ex05_sv_assertions/code/src_tb/: avalon_assertions_0.sv
ex06_formel/scripts/: check.do
ex06_formel/src_tb/: alu_assertions.sv  alu_wrapper.sv  datapath_assertions.sv  onectr_nomem_assertions.sv  onectr_nomem_wrapper.sv  regfile_wrapper.sv
ex06_formel/src_vhdl/: onectr_nomem.vhd
ex07_unittest/code/: floating.cpp  mathcomputer.cpp  simplecompute.cpp
ex09_fuzzing/code/xmlfuzzing/: fuzzing.py
ex_coverage_solution/solution/src_tb/: test_random_tb.sv
labo1_svcomb/: rapport.html  rapport.md
labo1_svcomb/code/: default.rmdb
labo1_svcomb/code/scripts/: sim.do
labo1_svcomb/code/src_tb/: min_max_top_tb.sv
labo2_uart/: rapport.md
labo2_uart/code/src_tb/: avl_uart_env.sv  avl_uart_interface_assertions.sv  avl_uart_scoreboard_rx.sv  avl_uart_scoreboard_tx.sv  avl_uart_tb.sv
labo2_uart/report/: report.html  report.md
labo3_spikedetector/code/: run_tests.py
labo3_spikedetector/code/embedded_soft/test/: CMakeLists.txt  test_spike_detector.cpp
labo3_spikedetector/code/embedded_soft/test/integration/: CMakeLists.txt  test_integration.cpp
labo3_spikedetector/code/embedded_soft/test/integration/common/: common.h  spikes.cpp  test.cpp
labo3_spikedetector/code/embedded_soft/test/mock/: mock_fpga_access.cpp  mock_fpga_access.hpp
labo3_spikedetector/code/embedded_soft/test/unit/: CMakeLists.txt  test_fpga_access_remote.cpp  test_spike_detector.cpp
labo3_spikedetector/code/embedded_soft/test/unit/mock/: mock_fpga_access.cpp  mock_fpga_access.hpp
labo3_spikedetector/code/fpga_sim/: Makefile  (+2 more)
labo3_spikedetector/report/: report.md
te1/: readme.md
(+23 files in other folders)
